--- a/package.json
+++ b/package.json
@@ -9,16 +9,20 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@types/react-calendar-heatmap": "^1.9.0",
     "crypto-js": "^4.2.0",
     "dexie": "^4.2.1",
     "dexie-react-hooks": "^4.2.0",
+    "framer-motion": "^12.23.26",
     "jspdf": "^3.0.4",
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
     "papaparse": "^5.5.3",
     "react": "19.2.3",
+    "react-calendar-heatmap": "^1.10.0",
     "react-dom": "19.2.3",
+    "recharts": "^3.6.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
