fix(pwa): change start_url to /dashboard to bypass landing page [skip ci]

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,7 +2,7 @@
   "name": "Personal Ledger Manager",
   "short_name": "Ledger",
   "description": "Secure, offline-first personal ledger management with Google Drive sync.",
-  "start_url": "/",
+  "start_url": "/dashboard",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#0f172a",
